// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`source.alias 1`] = `
"const a = 'hello world';
console.info(a);
"
`;

exports[`source.alias 2`] = `
""use strict";
var __webpack_exports__ = {};
const a = 'hello world';
console.info(a);
var __webpack_export_target__ = exports;
for(var __webpack_i__ in __webpack_exports__)__webpack_export_target__[__webpack_i__] = __webpack_exports__[__webpack_i__];
if (__webpack_exports__.__esModule) Object.defineProperty(__webpack_export_target__, '__esModule', {
    value: true
});
"
`;

exports[`source.alias 3`] = `
"import * as <WEBPACK_EXTERNAL_MODULE> from "./a.js";
console.info(<WEBPACK_EXTERNAL_MODULE>.a);
"
`;

exports[`source.alias 4`] = `
""use strict";
var __webpack_exports__ = {};
const external_a_cjs_namespaceObject = require("./a.cjs");
console.info(external_a_cjs_namespaceObject.a);
var __webpack_export_target__ = exports;
for(var __webpack_i__ in __webpack_exports__)__webpack_export_target__[__webpack_i__] = __webpack_exports__[__webpack_i__];
if (__webpack_exports__.__esModule) Object.defineProperty(__webpack_export_target__, '__esModule', {
    value: true
});
"
`;
